{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 54,
  "lineage": "d93f12aa-9fef-5cc8-671d-a7ff38b0ca0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "teamsoft_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:965301284462:instance/i-027a4f15ea246e624",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027a4f15ea246e624",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "teamsoft_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe16ebc32178de1f",
            "private_dns": "ip-10-0-0-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.15",
            "public_dns": "ec2-107-21-19-189.compute-1.amazonaws.com",
            "public_ip": "107.21.19.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:965301284462:key/df9b60e4-c2f3-4d0b-896b-29e055d6c2de",
                "throughput": 0,
                "volume_id": "vol-08e298de576d908cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01593bef7ff35fd66",
            "tags": {
              "Name": "teamsoft-web-server"
            },
            "tags_all": {
              "Name": "teamsoft-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ade395b4bf4b070e"
            ]
          },
          "dependencies": [
            "aws_key_pair.teamsoft_ssh_access",
            "aws_security_group.teamsoft_web_server",
            "aws_subnet.teamsoft_public_subnet",
            "aws_vpc.teamsoft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "teamsoft_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965301284462:internet-gateway/igw-06575a28f757d0922",
            "id": "igw-06575a28f757d0922",
            "owner_id": "965301284462",
            "tags": {
              "Name": "teamsoft-igw"
            },
            "tags_all": {
              "Name": "teamsoft-igw"
            },
            "vpc_id": "vpc-0a6d442e020bc861c"
          },
          "dependencies": [
            "aws_vpc.teamsoft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "teamsoft_public_tr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965301284462:route-table/rtb-0fb08d65292a88d0a",
            "id": "rtb-0fb08d65292a88d0a",
            "owner_id": "965301284462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06575a28f757d0922",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "teamsoft-public-rt"
            },
            "tags_all": {
              "Name": "teamsoft-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6d442e020bc861c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.teamsoft_igw",
            "aws_vpc.teamsoft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "teamsoft_rta_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04145bfd91635ffe9",
            "route_table_id": "rtb-0fb08d65292a88d0a",
            "subnet_id": "subnet-01593bef7ff35fd66"
          },
          "dependencies": [
            "aws_internet_gateway.teamsoft_igw",
            "aws_route_table.teamsoft_public_tr",
            "aws_subnet.teamsoft_public_subnet",
            "aws_vpc.teamsoft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "teamsoft_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965301284462:security-group/sg-0ade395b4bf4b070e",
            "description": "Grupo de seguranca para o webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ade395b4bf4b070e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "teamsoft_web-server-sg",
            "name_prefix": "",
            "owner_id": "965301284462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "teamsoft_web-server-sg"
            },
            "tags_all": {
              "Name": "teamsoft_web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6d442e020bc861c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.teamsoft_public_subnet",
            "aws_vpc.teamsoft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "teamsoft_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965301284462:subnet/subnet-01593bef7ff35fd66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01593bef7ff35fd66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "965301284462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teamsoft-public-subnet"
            },
            "tags_all": {
              "Name": "teamsoft-public-subnet"
            },
            "vpc_id": "vpc-0a6d442e020bc861c"
          },
          "dependencies": [
            "aws_vpc.teamsoft_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "teamsoft_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965301284462:vpc/vpc-0a6d442e020bc861c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0665ee8af916c4410",
            "default_route_table_id": "rtb-04620934a6ffabd56",
            "default_security_group_id": "sg-02f124342d26c4d2d",
            "dhcp_options_id": "dopt-431c8739",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6d442e020bc861c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04620934a6ffabd56",
            "owner_id": "965301284462",
            "tags": {
              "Name": "teamsoft-main-vpc"
            },
            "tags_all": {
              "Name": "teamsoft-main-vpc"
            }
          }
        }
      ]
    }
  ]
}